...
        android:id="@+id/image_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edit_profession_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="专业名" />

    <EditText
        android:id="@+id/edit_profession_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="专业简介" />

    <EditText
        android:id="@+id/edit_profession_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="专业课程" />

    <EditText
        android:id="@+id/edit_profession_requirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="申请要求" />
</LinearLayout>

